--- a/ITC-BE/appsettings.json
+++ b/ITC-BE/appsettings.json
@@ -9,7 +9,7 @@
 
   "Jwt": {
     "Key": "ufVeZsj2q2Jq3EdNpJdiezuJk7XAX8i5",
-    "Issuer": "sign.com"
+    "Issuer": "itc.com"
   },
   "Twilio": {
     "AccountSid": "AC6d660c6db38fbf72fafeef3c3d8353d6",
@@ -17,6 +17,6 @@
     "VerificationServiceSID": "VAe3b0cb31661805c906574adbbd2e8e91"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost,1433;User ID=sa;Password=MyP@ssword;Database=ICTDb"
+    "DefaultConnection": "server=localhost,1433;User ID=sa;Password=MyP@ssword123;Database=ICTDb"
   }
 }
