--- a/ITC.Core/ITC.Core.csproj
+++ b/ITC.Core/ITC.Core.csproj
@@ -13,6 +13,16 @@
     <None Remove="Data\" />
     <None Remove="Mapper\" />
     <None Remove="AutoMapper" />
+    <None Remove="Model\" />
+    <None Remove="Service\" />
+    <None Remove="Interface\" />
+    <None Remove="Microsoft.IdentityModel.Tokens" />
+    <None Remove="BouncyCastle" />
+    <None Remove="Effortless.Net.Encryption" />
+    <None Remove="Common\" />
+    <None Remove="Serilog" />
+    <None Remove="Utilities\" />
+    <None Remove="Microsoft.AspNetCore.Http" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
@@ -22,10 +32,18 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.25.1" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Mapper\" />
+    <Folder Include="Model\" />
+    <Folder Include="Service\" />
+    <Folder Include="Interface\" />
+    <Folder Include="Common\" />
+    <Folder Include="Utilities\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ITC.Data\ITC.Data.csproj" />
