--- a/ITC-BE/Properties/launchSettings.json
+++ b/ITC-BE/Properties/launchSettings.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -11,6 +12,8 @@
     "ITC_BE": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger",
+      "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7115;http://localhost:5061",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -19,6 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
